--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,10 @@
 name: 'QCC Build'
 description: 'Build Quakec .qc sources'
 outputs:
+  pwdlogs:
+    description: 'pwdlogs pwd logs'
+  lslogs:
+    description: 'lslogs ls logs'
   qcclogs:
     description: 'FTEQCC execution logs'
 runs:
