--- a/action.yml
+++ b/action.yml
@@ -1,12 +1,19 @@
-name: 'QCC Build'
-description: 'Build Quakec .qc sources'
-# outputs:
-  # pwdlogs:
-  #   description: 'pwdlogs pwd logs'
-  # lslogs:
-  #   description: 'lslogs ls logs'
-  # qcclogs:
-  #   description: 'FTEQCC execution logs'
+name: 'Quake build utils'
+description: 'Quake build utils compilation (FTEQCC, ericw-tools)'
+branding:
+  icon: 'box'
+  color: 'orange'
+inputs:
+  command:
+    description: |
+      FTEQCC or ericw tools to run,
+      complete with options. Examples:
+      - fteqcc64 -srcfile qc/progs.src
+      - qbsp mapfile.map
+      - qbsp mapfile.map && light mapfile.bsp && vis mapfile.bsp
+    required: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
+  args:
+    - ${{ inputs.command }}
