--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,6 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'docker://paiz0/qcc-docker-action:v1'
   args:
     - ${{ inputs.command }}
